schema/testdata/errors/model_names_max_lenght.keel
//expect-error:7:51:E053:Cannot use 'ALongLongLongLongLongModelNameThatIsVeryLong' as a model name as it is too long.
model ALongLongLongLongLongModelNameThatIsVeryLong {
    fields {
        foo Text
    }
}

model ALongLongLongLongModelNameThatNotVeryLong {
    fields {
        foo Text
    }
}
